--- a/pages/contact.html
+++ b/pages/contact.html
@@ -82,7 +82,7 @@
             </form>
         </section>
         <section id="address-section">
-            <div style="text-align: center;">
+            <div>
                 <p><b>Adres:</b>
                     İstanbul Üniversitesi-Cerrahpaşa Teknik Bilimler Meslek Yüksek Okulu Alkent 2000 Mahallesi Yiğittürk
                     Caddesi No:5/9/1 Büyükçekmece Yerleşkesi KLM Binası Büyükçekmece/İstanbul
