--- a/pages/contact.html
+++ b/pages/contact.html
@@ -91,8 +91,8 @@
             <section class="location">
                 <h2>Üniversite Konum</h2>
                 <!-- Loading lazy kullanıldığında iframe ögesi sayfa yüklenirken yüklenir. -->
-                <iframe loading="lazy"
-                    src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJZfgZpQBZtRQRFZJtOL9blag&key=AIzaSyDPz5n2YW41nc-N36s2eJ8Rf5vobe0OdIo">
+                <iframe id="location-iframe" loading="lazy"
+                    src="">
                 </iframe>
             </section>
         </section>
