--- a/pages/projects.html
+++ b/pages/projects.html
@@ -125,6 +125,9 @@
           <li>Scratch</li>
         </ul>
       </div>
+      <a href="https://scratch.mit.edu/projects/1027995806/" target="_blank">
+        Scratch'ta incele
+      </a>
     </section>
 
     <script src="../assets/js/footer.js" defer></script>
