--- a/index.html
+++ b/index.html
@@ -64,22 +64,29 @@
           ></iframe>
         </div>
         <div class="game-instructions">
+          <h3>Mouse Escape Nedir?</h3>
+          <p>
+            <strong>Mouse Escape</strong>, kedi tarafından yakalanmadan
+            yiyecekleri toplayarak hayatta kalmaya çalıştığınız heyecan verici
+            bir Scratch oyunudur. Oyunun süresi boyunca, her 10 saniyede bir
+            zorluk seviyesi artar.
+          </p>
           <h3>Nasıl Oynanır?</h3>
           <p>
-            Oyuna başlamak için ekranın üst kısmındaki
+            Oyunu başlatmak için ekranın üst kısmındaki
             <strong>"Yeşil Bayrak"</strong> butonuna tıklayın. Oyunu durdurmak
-            için ise <strong>"Kırmızı Bayrak"</strong> butonuna
-            tıklayabilirsiniz.
+            için <strong>"Kırmızı Bayrak"</strong> butonunu kullanabilirsiniz.
           </p>
           <p>
-            <strong>Hedef:</strong> Farenizi yön tuşlarıyla hareket ettirerek
-            yiyecekleri toplayın ve kediden kaçının! Topladığınız her yiyecek,
-            puanınızı artırır. <strong>100 puana ulaşarak</strong> oyunu
-            kazanın.
+            <strong>Hedef:</strong> Klavyenizdeki yön tuşlarını kullanarak
+            farenizi hareket ettirin, yiyecekleri toplayın ve kediden kaçın!
+            Topladığınız her yiyecek puanınızı artırır.
+            <strong>100 puana ulaşarak</strong> oyunu kazanın.
           </p>
           <p>
-            Ancak dikkatli olun! Eğer kediye yakalanırsanız oyun sona erer.
-            Stratejinizi iyi belirleyin, hızlı olun ve en önemlisi eğlenin!
+            Dikkatli olun! Kedinin sizi yakalaması durumunda oyun sona erer.
+            Stratejinizi iyi planlayın, hızlı olun ve en önemlisi eğlenmeyi
+            unutmayın!
           </p>
           <p><em>İyi eğlenceler!</em></p>
         </div>
