projects page updated

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,10 +21,10 @@
             <img src="../assets/img/game-2048-step1.jpg" alt="game photo step 1" loading="eager">
           </div>
           <div class="project-image small">
-            <img src="../assets/img/game-2048-step2.jpg" alt="game photo step 2" loading="lazy">
+            <img src="../assets/img/game-2048-step2.jpg" alt="game photo step 2" loading="eager">
           </div>
           <div class="project-image small">
-            <img src="../assets/img/game-2048-full.jpg" alt="game photo full" loading="lazy">
+            <img src="../assets/img/game-2048-full.jpg" alt="game photo full" loading="eager">
           </div>
         </div>
         <p>Bu proje, klasik 2048 oyununu WinForms kullanarak geliştirdiğim bir masaüstü oyunudur. Oyun, kullanıcının
@@ -50,7 +50,7 @@
       <div class="project-box">
         <div class="project-box-image-container">
           <div class="project-image small">
-            <img src="../assets/img/weather-extension.jpg" alt="Weather extension screenshot" loading="lazy">
+            <img src="../assets/img/weather-extension.png" alt="Weather extension screenshot" loading="lazy">
           </div>
         </div>
         <p>Bu proje, Chrome tarayıcısı için geliştirdiğim bir hava durumu eklentisidir. Eklenti, kullanıcının bulunduğu
