iframe game update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <button id="fullscreen-button">Tam Ekran Yap</button>
           <iframe
             id="game-frame"
-            src=""
+            src="/pages/game-placeholder.html"
             allowtransparency="true"
             scrolling="no"
             allowfullscreen
