Refactor file structure, implement responsive design, and enhance UI

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,13 @@
   <title>About</title>
   <!--For social media links, Font Awesome 6.0.0-beta3 -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <!-- Styles -->
   <link rel="stylesheet" href="../assets/css/about.css" />
+  <!-- Scripts -->
+  <base href="/">
+  <script src="../assets/js/about.js" defer></script>
+  <script src="./components/navigation/navigation.js" defer></script>
+  <script src="./components/footer/footer.js" defer></script>
 </head>
 
 <body>
@@ -55,7 +61,7 @@
     </section>
 
     <section>
-      <h3>Programlama Dilleri</h3>
+      <h3>Programlama Becerileri</h3>
       <ul class="programming-languages">
         <li>
           <img src="https://cdn.worldvectorlogo.com/logos/html-1.svg" alt="HTML logo" title="HTML">
@@ -126,8 +132,6 @@
       </div>
     </section>
   </main>
-
-  <script src="../assets/js/footer.js" defer></script>
 </body>
 
 </html>
