--- a/experience/index.html
+++ b/experience/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İş deneyimi</title>
+    <!-- Styles -->
     <link rel="stylesheet" href="../assets/css/experience.css">
+    <!-- Scripts -->
+    <base href="/">
+    <script src="./components/navigation/navigation.js" defer></script>
+    <script src="./components/footer/footer.js" defer></script>
 </head>
 
 <body>
@@ -72,8 +77,6 @@
             </p>
         </section>
     </main>
-
-    <script src="../assets/js/footer.js" defer></script>
 </body>
 
 </html>
