--- a/index.html
+++ b/index.html
@@ -1,99 +1,72 @@
 <!DOCTYPE html>
 <html lang="tr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Kişisel web sitem. Hakkımda, iş deneyimi, projelerim ve iletişim sayfalarım burada."
-    />
-    <meta
-      name="keywords"
-      content="web geliştirme, yazılım, projeler, iş deneyimi, iletişim"
-    />
-    <meta name="author" content="Yusuf Sevinçhan" />
-    <title>My WEB Site</title>
-    <link rel="stylesheet" href="./assets/css/index.css" />
-  </head>
 
-  <body>
-    <header>
-      <h1>Web siteme Hoşgeldiniz!</h1>
-    </header>
-    <main>
-      <!-- Hero Section -->
-      <section class="hero-section">
-        <h2>Merhaba, Ben Yusuf Sevinçhan</h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Kişisel web sitem. Hakkımda, iş deneyimi, projelerim ve iletişim sayfalarım burada." />
+  <meta name="keywords" content="web geliştirme, yazılım, projeler, iş deneyimi, iletişim" />
+  <meta name="author" content="Yusuf Sevinçhan" />
+  <title>My WEB Site</title>
+  <link rel="stylesheet" href="./assets/css/index.css" />
+  <script src="./assets/js/index.js" defer></script>
+  <script src="./components/navigation/navigation.js" defer></script>
+  <script src="./components/footer/footer.js" defer></script>
+</head>
+
+<body>
+  <header>
+    <h1>Web siteme Hoşgeldiniz!</h1>
+  </header>
+  <main>
+    <!-- Hero Section -->
+    <section class="hero-section">
+      <h2>Merhaba, Ben Yusuf Sevinçhan</h2>
+      <p>
+        <b>Web geliştirme ve yazılım konularında çalışmalar yapıyorum. Bu
+          sitemde hakkımda, iş deneyimim, projelerim ve iletişim bilgilerim
+          bulunmaktadır.</b>
+      </p>
+    </section>
+    <!-- My Game from scratch -->
+    <section class="game-section">
+      <h2>Mouse Escape Oyunu</h2>
+      <div id="game-container">
+        <button id="play-button">Başlat</button>
+        <button id="fullscreen-button">Tam Ekran Yap</button>
+        <iframe id="game-frame" src="./components/game-preview/game-preview.html" allowtransparency="true"
+          scrolling="no" allowfullscreen></iframe>
+      </div>
+      <div class="game-instructions">
+        <h3>Mouse Escape Nedir?</h3>
         <p>
-          <b
-            >Web geliştirme ve yazılım konularında çalışmalar yapıyorum. Bu
-            sitemde hakkımda, iş deneyimim, projelerim ve iletişim bilgilerim
-            bulunmaktadır.</b
-          >
+          <strong>Mouse Escape</strong>, kedi tarafından yakalanmadan
+          yiyecekleri toplayarak hayatta kalmaya çalıştığınız heyecan verici
+          bir Scratch oyunudur. Oyunun süresi boyunca, her 10 saniyede bir
+          zorluk seviyesi artar.
         </p>
-      </section>
-      <!-- Navigation -->
-      <nav>
-        <ol>
-          <a href="./pages/about.html">
-            <li>Hakkımda</li>
-          </a>
-          <a href="./pages/experience.html">
-            <li>İş Deneyimi</li>
-          </a>
-          <a href="./pages/projects.html">
-            <li>Projelerim</li>
-          </a>
-          <a href="./pages/contact.html">
-            <li>İletişim</li>
-          </a>
-        </ol>
-      </nav>
-      <!-- My Game from scratch -->
-      <section class="game-section">
-        <h1>Mouse Escape Oyunu</h1>
-        <div id="game-container">
-          <button id="play-button">Başlat</button>
-          <button id="fullscreen-button">Tam Ekran Yap</button>
-          <iframe
-            id="game-frame"
-            src="/pages/game-placeholder.html"
-            allowtransparency="true"
-            scrolling="no"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <div class="game-instructions">
-          <h3>Mouse Escape Nedir?</h3>
-          <p>
-            <strong>Mouse Escape</strong>, kedi tarafından yakalanmadan
-            yiyecekleri toplayarak hayatta kalmaya çalıştığınız heyecan verici
-            bir Scratch oyunudur. Oyunun süresi boyunca, her 10 saniyede bir
-            zorluk seviyesi artar.
-          </p>
-          <h3>Nasıl Oynanır?</h3>
-          <p>
-            Oyunu başlatmak için ekranın üst kısmındaki
-            <strong>"Yeşil Bayrak"</strong> butonuna tıklayın. Oyunu durdurmak
-            için <strong>"Kırmızı Bayrak"</strong> butonunu kullanabilirsiniz.
-          </p>
-          <p>
-            <strong>Hedef:</strong> Klavyenizdeki yön tuşlarını kullanarak
-            farenizi hareket ettirin, yiyecekleri toplayın ve kediden kaçın!
-            Topladığınız her yiyecek puanınızı artırır.
-            <strong>100 puana ulaşarak</strong> oyunu kazanın.
-          </p>
-          <p>
-            Dikkatli olun! Kedinin sizi yakalaması durumunda oyun sona erer.
-            Stratejinizi iyi planlayın, hızlı olun ve en önemlisi eğlenmeyi
-            unutmayın!
-          </p>
-          <p><em>İyi eğlenceler!</em></p>
-        </div>
-      </section>
-    </main>
+        <h3>Nasıl Oynanır?</h3>
+        <p>
+          Oyunu başlatmak için ekranın üst kısmındaki
+          <strong>"Yeşil Bayrak"</strong> butonuna tıklayın. Oyunu durdurmak
+          için <strong>"Kırmızı Bayrak"</strong> butonunu kullanabilirsiniz.
+        </p>
+        <p>
+          <strong>Hedef:</strong> Klavyenizdeki yön tuşlarını kullanarak
+          farenizi hareket ettirin, yiyecekleri toplayın ve kediden kaçın!
+          Topladığınız her yiyecek puanınızı artırır.
+          <strong>100 puana ulaşarak</strong> oyunu kazanın.
+        </p>
+        <p>
+          Dikkatli olun! Kedinin sizi yakalaması durumunda oyun sona erer.
+          Stratejinizi iyi planlayın, hızlı olun ve en önemlisi eğlenmeyi
+          unutmayın!
+        </p>
+        <p><em>İyi eğlenceler!</em></p>
+      </div>
+    </section>
+  </main>
+</body>
 
-    <script src="./assets/js/index.js" defer></script>
-    <script src="./assets/js/footer.js" defer></script>
-  </body>
 </html>
