--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <!-- Styles -->
   <link rel="stylesheet" href="../assets/css/projects.css">
+  <!-- Scripts -->
+  <base href="/">
+  <script src="./components/navigation/navigation.js" defer></script>
+  <script src="./components/footer/footer.js" defer></script>
 </head>
 
 <body>
@@ -40,10 +45,10 @@
           <li>WinForms</li>
           <li>Visual Studio</li>
         </ul>
-        <a href="https://github.com/yusufsevinchan/2048-Game-Windows-Form-App" target="_blank">
-          Github da incele
-        </a>
       </div>
+      <a href="https://github.com/yusufsevinchan/2048-Game-Windows-Form-App" target="_blank">
+        Github da incele
+      </a>
     </section>
     <section>
       <h2>Hava Durumu Chrome Eklentisi</h2>
@@ -64,11 +69,11 @@
           <li>Open Weather Map API</li>
           <li>Chrome Eklentisi</li>
         </ul>
-        <a href="https://chromewebstore.google.com/detail/g%C3%BCncel-hava-durumu-kolay/dpnppkohaamjanddepocpipmjmlmobbp?hl=tr"
-          target="_blank">
-          Chrome Web Store'da incele
-        </a>
       </div>
+      <a href="https://chromewebstore.google.com/detail/g%C3%BCncel-hava-durumu-kolay/dpnppkohaamjanddepocpipmjmlmobbp?hl=tr"
+        target="_blank">
+        Chrome Web Store'da incele
+      </a>
     </section>
     <section>
       <h2>Blazor Admin panel</h2>
@@ -130,7 +135,6 @@
       </a>
     </section>
 
-    <script src="../assets/js/footer.js" defer></script>
 </body>
 
 </html>
