Implement responsive design, and enhance UI

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+  <video autoplay muted loop id="background-video">
+    <source src="assets/video/background.webm" type="video/webm" />
+  </video>
   <header>
     <h1>Web siteme Hoşgeldiniz!</h1>
   </header>
