Implement responsive design, enhance UI, and improve performance

--- a/contact/index.html
+++ b/contact/index.html
@@ -98,7 +98,7 @@
             <section class="location">
                 <h2>Üniversite Konum</h2>
                 <!-- Loading lazy kullanıldığında iframe ögesi sayfa yüklenirken yüklenir. -->
-                <iframe id="location-iframe" loading="lazy" src="">
+                <iframe id="location-iframe" loading="lazy" src="" title="İstanbul Üniversitesi-Cerrahpaşa Teknik Bilimler MYO Konum"></iframe>
                 </iframe>
             </section>
         </section>
