--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <meta name="keywords" content="web geliştirme, yazılım, projeler, iş deneyimi, iletişim" />
   <meta name="author" content="Yusuf Sevinçhan" />
   <title>My WEB Site</title>
+  <!-- Styles -->
   <link rel="stylesheet" href="./assets/css/index.css" />
+  <!-- Scripts -->
   <script src="./assets/js/index.js" defer></script>
   <script src="./components/navigation/navigation.js" defer></script>
   <script src="./components/footer/footer.js" defer></script>
@@ -27,9 +29,9 @@
     <section class="hero-section">
       <h2>Merhaba, Ben Yusuf Sevinçhan</h2>
       <p>
-        <b>Web geliştirme ve yazılım konularında çalışmalar yapıyorum. Bu
-          sitemde hakkımda, iş deneyimim, projelerim ve iletişim bilgilerim
-          bulunmaktadır.</b>
+        Web geliştirme ve yazılım konularında çalışmalar yapıyorum. Bu
+        sitemde hakkımda, iş deneyimim, projelerim ve iletişim bilgilerim
+        bulunmaktadır.</b>
       </p>
     </section>
     <!-- My Game from scratch -->
@@ -39,7 +41,7 @@
         <button id="play-button">Başlat</button>
         <button id="fullscreen-button">Tam Ekran Yap</button>
         <iframe id="game-frame" src="./components/game-preview/game-preview.html" allowtransparency="true"
-          scrolling="no" allowfullscreen></iframe>
+            scrolling="no" allowfullscreen title="Mouse Escape Oyunu"></iframe>
       </div>
       <div class="game-instructions">
         <h3>Mouse Escape Nedir?</h3>
