--- a/projects/index.html
+++ b/projects/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <h1>Projelerim</h1>
+    <h1>Projeler</h1>
   </header>
   <main>
     <section>
@@ -23,13 +23,13 @@
       <div class="project-box">
         <div class="project-box-image-container">
           <div class="project-image small">
-            <img src="../assets/img/game-2048-step1.jpg" alt="game photo step 1" loading="eager">
+            <img src="../assets/img/game-2048-step1.webp" alt="game photo step 1" loading="eager">
           </div>
           <div class="project-image small">
-            <img src="../assets/img/game-2048-step2.jpg" alt="game photo step 2" loading="eager">
+            <img src="../assets/img/game-2048-step2.webp" alt="game photo step 2" loading="eager">
           </div>
           <div class="project-image small">
-            <img src="../assets/img/game-2048-full.jpg" alt="game photo full" loading="eager">
+            <img src="../assets/img/game-2048-full.webp" alt="game photo full" loading="eager">
           </div>
         </div>
         <p>Bu proje, klasik 2048 oyununu WinForms kullanarak geliştirdiğim bir masaüstü oyunudur. Oyun, kullanıcının
@@ -55,7 +55,7 @@
       <div class="project-box">
         <div class="project-box-image-container">
           <div class="project-image small">
-            <img src="../assets/img/weather-extension.png" alt="Weather extension screenshot" loading="lazy">
+            <img src="../assets/img/weather-extension.webp" alt="Weather extension screenshot" loading="lazy">
           </div>
         </div>
         <p>Bu proje, Chrome tarayıcısı için geliştirdiğim bir hava durumu eklentisidir. Eklenti, kullanıcının bulunduğu
@@ -80,14 +80,14 @@
       <div class="project-box">
         <div class="project-box-image-container">
           <div class="project-image large">
-            <img src="../assets/img/blazor-admin-panel.jpg" alt="Blazor admin panel" loading="lazy">
+            <img src="../assets/img/blazor-admin-panel.webp" alt="Blazor admin panel" loading="lazy">
           </div>
           <div class="project-image large">
-            <img src="../assets/img/blazor-admin-panel-users.jpg" alt="Blazor admin panel users management"
+            <img src="../assets/img/blazor-admin-panel-users.webp" alt="Blazor admin panel users management"
               loading="lazy">
           </div>
           <div class="project-image large">
-            <img src="../assets/img/blazor-admin-panel-courses.jpg" alt="Blazor admin panel courses management"
+            <img src="../assets/img/blazor-admin-panel-courses.webp" alt="Blazor admin panel courses management"
               loading="lazy">
           </div>
         </div>
@@ -115,10 +115,10 @@
       <div class="project-box">
         <div class="project-box-image-container">
           <div class="project-image medium">
-            <img src="../assets/img/scratch-game-step1.jpg" alt="Scratch game photo step 1" loading="lazy">
+            <img src="../assets/img/scratch-game-step1.webp" alt="Scratch game photo step 1" loading="lazy">
           </div>
           <div class="project-image medium">
-            <img src="../assets/img/scratch-game-step2.jpg" alt="Scratch game photo step 2" loading="lazy">
+            <img src="../assets/img/scratch-game-step2.webp" alt="Scratch game photo step 2" loading="lazy">
           </div>
         </div>
         <p>Bu proje, Scratch platformunda geliştirdiğim bir oyundur. Oyunda, kullanıcı yön tuşları ile fareyi kontrol
