SEO improvements, performance enhancement, and responsive design updates

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About</title>
+  <title>Yusuf Sevinçhan - Hakkımda</title>
+  <meta name="description"
+    content="Yusuf Sevinçhan'ın özgeçmişi, eğitim bilgileri, programlama becerileri, yabancı dil bilgisi, hobileri ve kariyer hedefleri.">
+  <meta name="keywords"
+    content="Yusuf Sevinçhan, özgeçmiş, eğitim, programlama becerileri, yabancı dil, hobiler, kariyer hedefleri">
   <!-- Styles -->
   <link rel="stylesheet" href="../assets/css/about.css" />
   <!-- Scripts -->
@@ -20,9 +24,7 @@
   </header>
   <main>
     <div class="profile">
-      <img
-        src="https://media.licdn.com/dms/image/v2/D4D03AQFm_CmxSIUzQA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1714816029760?e=1739404800&v=beta&t=q6sMHYJZ9UAvvTGUxBlNmjF8R8lLN9cM70qdrZTNxkQ"
-        alt="profile photo" class="profile-photo">
+      <img src="../assets/img/profile.webp" alt="Yusuf Sevinçhan'ın profil fotoğrafı" class="profile-photo">
     </div>
 
     <section>
