--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Yusuf Sevinçhan iletişim sayfası. Bana mesaj veya geri bildirim gönderin.">
-    <title>İletişim</title>
+    <title>Yusuf Sevinçhan - İletişim</title>
+    <meta name="keywords" content="Yusuf Sevinçhan, iletişim, mesaj gönder, geri bildirim, mail, Linkedin">
+    <meta property="og:title" content="Yusuf Sevinçhan - İletişim">
+    <meta property="og:description" content="Yusuf Sevinçhan iletişim sayfası. Bana mesaj veya geri bildirim gönderin.">
+    <meta property="og:type" content="website">
     <!-- Styles -->
     <link rel="stylesheet" href="../assets/css/contact.css">
     <!-- Scripts -->
@@ -22,15 +26,15 @@
     <main>
         <section class="contact-info">
             <h2>Mail & Linkedin Profilim</h2>
-                <p><b>Mail:</b>
-                    <a href="mailto:yusuf.sevinchan.dev@gmail.com">
-                        yusuf.sevinchan.dev@gmail.com
-                    </a>
-                </p>
-                <p><b>Linkedin:</b>
-                    <a href="https://www.linkedin.com/in/yusuf-sevinchan" target="_blank">
-                        Yusuf Sevinçhan
-                    </a>
+            <p><b>Mail:</b>
+                <a href="mailto:yusuf.sevinchan.dev@gmail.com">
+                    yusuf.sevinchan.dev@gmail.com
+                </a>
+            </p>
+            <p><b>Linkedin:</b>
+                <a href="https://www.linkedin.com/in/yusuf-sevinchan" target="_blank">
+                    Yusuf Sevinçhan
+                </a>
         </section>
         <section id="suggestion-section">
             <!-- İletişim Formu -->
@@ -98,7 +102,8 @@
             <section class="location">
                 <h2>Üniversite Konum</h2>
                 <!-- Loading lazy kullanıldığında iframe ögesi sayfa yüklenirken yüklenir. -->
-                <iframe id="location-iframe" loading="lazy" src="" title="İstanbul Üniversitesi-Cerrahpaşa Teknik Bilimler MYO Konum"></iframe>
+                <iframe id="location-iframe" loading="lazy" src=""
+                    title="İstanbul Üniversitesi-Cerrahpaşa Teknik Bilimler MYO Konum"></iframe>
                 </iframe>
             </section>
         </section>
