--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';" />
+  <meta name=" description"
     content="Kişisel web sitem. Hakkımda, iş deneyimi, projelerim ve iletişim sayfalarım burada." />
   <meta name="keywords" content="web geliştirme, yazılım, projeler, iş deneyimi, iletişim" />
   <meta name="author" content="Yusuf Sevinçhan" />
-  <title>My WEB Site</title>
+  <title>Yusuf Sevinçhan - Kişisel Web Sitem</title>
   <!-- Styles -->
   <link rel="stylesheet" href="./assets/css/index.css" />
+  <link rel="preload" href="./assets/fonts/Montserrat/Montserrat-woff2/Montserrat-Regular.woff2" as="font"
+    type="font/woff2" crossorigin="anonymous">
   <!-- Scripts -->
   <script src="./assets/js/index.js" defer></script>
   <script src="./components/navigation/navigation.js" defer></script>
   <script src="./components/footer/footer.js" defer></script>
+
+  <!-- Prefetch Components -->
+  <link rel="prefetch" href="/components/navigation/navigation.html" as="document">
+  <link rel="prefetch" href="/components/footer/footer.html" as="document" crossorigin="anonymous">
 </head>
 
 <body>
-  <video autoplay muted loop id="background-video">
+  <video autoplay muted loop id="background-video" class="" width="1920" height="1080">
     <source src="assets/video/background.webm" type="video/webm" />
   </video>
   <header>
@@ -41,7 +49,7 @@
         <button id="play-button">Başlat</button>
         <button id="fullscreen-button">Tam Ekran Yap</button>
         <iframe id="game-frame" src="./components/game-preview/game-preview.html" allowtransparency="true"
-            scrolling="no" allowfullscreen title="Mouse Escape Oyunu"></iframe>
+          scrolling="no" allowfullscreen title="Mouse Escape Oyunu"></iframe>
       </div>
       <div class="game-instructions">
         <h3>Mouse Escape Nedir?</h3>
