--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Yusuf Sevinçhan - Projeler</title>
+  <meta name="description"
+    content="Yusuf Sevinçhan'ın projeleri: 2048 Oyunu, Hava Durumu Chrome Eklentisi, Blazor Admin Panel, Scratch Oyunu.">
+  <meta name="keywords"
+    content="Yusuf Sevinçhan, projeler, 2048 oyunu, hava durumu eklentisi, Blazor admin panel, Scratch oyunu">
   <!-- Styles -->
   <link rel="stylesheet" href="../assets/css/projects.css">
   <!-- Scripts -->
