--- a/experience/index.html
+++ b/experience/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>İş deneyimi</title>
+    <title>İş Deneyimi - Yusuf'un Portföyü</title>
+    <meta name="description" content="Yusuf'un iş deneyimleri: BT Stajyeri, Yazılım Geliştirici Stajyeri ve daha fazlası. C#, .NET Framework, Blazor ve diğer teknolojilerle ilgili projeler.">
+    <meta name="keywords" content="Yusuf, iş deneyimi, BT Stajyeri, Yazılım Geliştirici Stajyeri, C#, .NET Framework, Blazor, yazılım geliştirme, portföy">
     <!-- Styles -->
     <link rel="stylesheet" href="../assets/css/experience.css">
     <!-- Scripts -->
@@ -15,7 +17,7 @@
 
 <body>
     <header>
-        <h1>İş deneyimi</h1>
+        <h1>İş Deneyimi</h1>
     </header>
     <main>
         <section class="job-card">
