Resolved Scratch game issue, updated footer.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';" />
+    content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; frame-src 'self' https://scratch.mit.edu;">
   <meta name=" description"
     content="Kişisel web sitem. Hakkımda, iş deneyimi, projelerim ve iletişim sayfalarım burada." />
   <meta name="keywords" content="web geliştirme, yazılım, projeler, iş deneyimi, iletişim" />
@@ -19,7 +19,6 @@
   <script src="./assets/js/index.js" defer></script>
   <script src="./components/navigation/navigation.js" defer></script>
   <script src="./components/footer/footer.js" defer></script>
-
   <!-- Prefetch Components -->
   <link rel="prefetch" href="/components/navigation/navigation.html" as="document">
   <link rel="prefetch" href="/components/footer/footer.html" as="document" crossorigin="anonymous">
